Two new pages, minor JS functionality, prototype for a logo, minor changes

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -149,3 +149,9 @@ link: asteroid-belt
                         <a href="https://en.wikipedia.org/wiki/List_of_exceptional_asteroids">https://en.wikipedia.org/wiki/List_of_exceptional_asteroids</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catminor-planets.html %}
+                </div>
+                <div class="cat">
+                    {% include catlargest-asteroids.html %}
+                </div>
