--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -6,15 +6,20 @@ link: asteroid
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h300">
                         <img class="articleimage" src="../assets/images/diagrams/asteroids-around-the-sun.png" alt="Location of asteroids">
                         <p class="caption">Location of asteroids in the Solar System. Red - trojans; brown - Hildas; pink, beige, orange - asteroid belt; green - near-Earth asteroids. <a href="https://commons.wikimedia.org/wiki/File:Inner_solar_system_objects_top_view_for_wiki.png">Source</a></p>
                     </div>
                 <p class="paragraph">
                     An asteroid is a minor planet that is within, or shares the orbits of <a href="jupiter.html">Jupiter</a>.
-                    Asteroids consist of materials like carbonates, silicates, and metals, and have less ice than minor planets beyond Jupiter, like <a href="centaur.html">centaurs</a>, or <a href="tno.html">trans-neptunian objects</a>.
+                    Asteroids consist of materials like carbonates, organic material, silicates, and metals, and have less ice than minor planets beyond Jupiter, like <a href="centaur.html">centaurs</a>, or <a href="tno.html">trans-neptunian objects</a>.
                     The biggest concentration of asteroids is the <a href="asteroid-belt.html">asteroid belt</a> between <a href="mars.html">Mars</a> and Jupiter, where the biggest asteroids like <a href="ceres.html">Ceres</a>, <a href="vesta.html">Vesta</a>, <a href="pallas.html">Pallas</a>, and <a href="hygiea.html">Hygiea</a> are located.
-                    Multiple missions were sent to asteroids for a number of reasons, including more general missions to study them from a distance, sample returns, and even asteroid deflection.
+                    Ohter populations of asteroids are Jupiter<a href="trojan.html">trojans</a> that were drawn by the planet's strong gravity into the stable L4 and L5 points, and the Hilda triangle, an intermediate region of the outer belt.
+                    There are also many scattered asteroids that cross, or approach the orbits of the inner planets like <a href="earth.html">Earth</a> and Mars.
+                    The <a href="nea.html">near-Earth asteroids</a> are of greater interest because many of them are potentially hazardous and could strike Earth.
+                </p>
+                <p class="paragraph">
+                    Multiple missions were sent to asteroids for a number of reasons, including more general missions to study them from a distance, sample returns, and even asteroid deflection tests.
                 </p>
                 <h2 class="paragraphheader" id="DiscoveryOfAsteroids">Discovery of asteroids</h2>
                 <p class="paragraph">
@@ -27,17 +32,25 @@ link: asteroid
                     William Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
                 </p>
                 <p class="paragraph">
-                    In 1878, the asteroid Hilda was discovered, which depending on the definition of the asteroid belt, is the first outside of it, being part of the Hilda asteroids.
+                    First asteroid to be discovered outside the main belt is the Mars crosser Aethra, which was lost after 22 days of observation, eventually getting rediscovered in 1922.
+                    In 1875, the asteroid Hilda was discovered, being part of the Hilda asteroids.
                     Similarly, the asteroid Thule was discovered in 1888, which is even further away from the asteroid belt and closer to Jupiter.
-                    Max Wolf pioneered the use of photography to discover asteroids since 1891.
+                    These two are often considered part of the outer main belt, but their respective groups are unique, with the Hildas forming a triangle with points around Jupiter's L3, 4, and 5 points.
+                </p>
+                <p class="paragraph">
+                    Until then, asteroid discoveries were significantly cumbersome for astronomers, some even calling them "vermin of the skies" for getting away into more significant observations.
+                    The best visual discoverer at the time was Johann Palisa, who discovered 122 asteroids during his lifetime.
+                    He worked closely with Max Wolf, who pioneered the use of photography to discover asteroids since 1891.
                     He alone discovered 248 asteroids.
-                    The first <a href="nea.html">near-Earth asteroid</a> to be discovered was Eros in 1898.
-                    Achiles was the first <a href="trojan.html">trojan</a> of Jupiter to be discovered in 1906 by Wolf himself.
+                </p>
+                <p class="paragraph">
+                    The first near-Earth asteroid to be discovered was Eros in 1898.
+                    Achiles was the first trojan of Jupiter to be discovered in 1906 by Wolf himself.
                     New asteroids were discovered at a much higher rate, requiring more complex provisional naming schemes before getting approved by the Minor Planet Center.
                 </p>
                 <p class="paragraph">
                     Eventually, many much smaller asteroids were being discovered with greater technology.
-                    This has proven crucial in the cataloguing of near-Earth asteroids that are potentially hazardous and could strike <a href="earth.html">Earth</a>.
+                    This has proven crucial in the cataloguing of near-Earth asteroids that are potentially hazardous and could strike Earth.
                     DART, a mission by NASA, was the first to change the orbit of an asteroid, albeit a small one (Didymos's moon Dimorphos.)
                     A potential use of asteroids, particularly metal-rich ones, is asteroid mining.
                     The NASA mission Psyche is on its way to the asteroid of the same name to study its composition and formation.
@@ -161,6 +174,68 @@ link: asteroid
                     Thule asteroids are a small group of asteroids that orbit closer to Jupiter, outside the Hildas.
                     They are in a 4:3 resonance with Jupiter.
                 </p>
+                <div class="articlediv">
+                    <div class="captionbox right h120">
+                        <img class="articleimage" src="../assets/images/asteroids/didymos.png" alt="Didymos and Dimorphos">
+                        <img class="articleimage" src="../assets/images/other/dart-impact-replay.gif" alt="Dimorphos impact replay">
+                        <p class="caption">Didymos with its moon Dimorphos and a replay of the impact</p>
+                    </div>
+                    <h2 class="paragraphsubheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        The first spacecraft to make close flybys of asteroids was the Galileo mission to Jupiter, which encountered the asteroids Gaspra and Ida in 1991 and 1993 respectively.
+                        Other asteroids that were visited by spacecrafts on their way to other objects include Annefrank by Stardust, Braille by Deep Space 1, Lutetia and Šteins by Rosetta, and Toutatis by Chang'e 2, 
+                    </p>
+                    <p class="paragraph">
+                        The first dedicated asteroid mission was NEAR Shoemaker, launched in 1996, which first passed by the main-belt Mathilde, after which it entered orbit around near-Earth asteroid Eros.
+                        After one year in orbit, the spacecraft landed on the surface and transmited data for two weeks.
+                        The spacecraft Dawn was another general asteroid mission, launched in 2007, and sent to visit the two largest asteroids - Ceres and Vesta.
+                        It orbited Vesta for one year, after which it left for Ceres.
+                        The orbiter operated there for three years before losing contact, still orbiting to this day.
+                    </p>
+                    <p class="paragraph">
+                        Hayabusa, launched by JAXA in 2003, was the first sample return mission.
+                        It visited the small near-Eart asteroid Itokawa, after which it returned a capsule of regolith back to Earth.
+                        A follow-up mission, Hayabusa-2, visited another asteroid - Ryugu.
+                        The samples returned contained not just silicate rocks, water ice, and simple organics, but also kore complex organic compounds like uracil and vitamin B3.
+                        The spacecraft's mission has been extended and will now visit two more asteroids.
+                        Meanwhile, the NASA mission OSIRIS-REx mapped extensively the potentially-hazardous asteroid Bennu after which it landed to collect regolith.
+                        The returned sample showed the presence of amino acids and all nucleobases for DNA and RNA.
+                        The next target of the mission (renamed OSIRIX-APEx for the extended mission) will next target another hazardous asteroid - Apophis.
+                    </p>
+                    <p class="paragraph">
+                        DART was launched in 2021 with one purpose - impacting into an asteroid.
+                        It reached the small near-Earth asteroid Didymos and its even smaller moon Dimorphos.
+                        Dimorphos measures at around 151 m in diameter, making it a perfect test target for the first ever asteroid deflection test.
+                        The impact reduced the orbital period with 33 minutes and ejected a million kilograms of material.
+                        Hera, a follow-up mission by ESA is on its way to the system to further investigate the system.
+                    </p>
+                </div>
+                <h3 class="paragraphsubheader" id="UpcomingMissions">Upcoming missions</h3>
+                <p class="paragraph">
+                    After Hayabusa 2#'s visit of Torifune and Hera's visit of the Didymos system, the next mission to an asteroid is Tianwen-2, launched in 2025.
+                    This will be the fifth sample return of an asteroid and the second asteroid visited by CNSA, the target being Kamo'oalewa.
+                    The spacecraft will then return a capsule and go for its second target, the asteroid 311P/PanSTARRS.
+                    CNSA is also proposing a deflection test mission this decade.
+                </p>
+                <p class="paragraph">
+                    Lucy is a NASA mission that will be the first to visit the Jupiter trojans.
+                    On its way to the system, the spacecraft has already encountered the main-belt asteroids Dinkinesh and Donaldjohanson.
+                    When it reaches the Greek camp, it will make flybys of four asteroids, and then go to the Trojan camp, making a flyby of Patroclus.
+                </p>
+                <p class="paragraph">
+                    Another NASA mission on its way to an asteroid is Psyche.
+                    It will enter orbit around the asteroid of the same name for 20 months.
+                    The reason that Psyche was selected for the mission is due to its metallic composition.
+                    While Lutetia, a previously visited asteroid, is an M-type spectra, data suggests that it is much richer in metals.
+                    Psyche will see if Psyche is an exposed metal core of a protoplanet, or a stone with regolith consisting of metal-rich compounds.
+                </p>
+                <p class="paragraph">
+                    JAXA is sending a tech demonstration spacecraft DESTINY+ to the asteroid Phaethon, parent body of the Geminids meteor shower.
+                    It will collect samples from the dust it leaves behind.
+                    Another upcoming mission is MBR Explorer, planned by the UAE Space Agency.
+                    It will fly by six asteroids before landing on a seventh, Justitia, examining the prospects of asteroid mining.
+                    Justitia is an unusually red asteroid, suggesting it is tholin-rich and has likely migrated from the outer Solar System. 
+                </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
@@ -169,4 +244,13 @@ link: asteroid
                     <li>
                         <a href="https://science.nasa.gov/solar-system/asteroids/">https://science.nasa.gov/solar-system/asteroids/</a>
                     </li>
+                    <li>
+                        <a href="https://www.planetary.org/articles/20130219-vermin-of-the-sky">https://www.planetary.org/articles/20130219-vermin-of-the-sky</a>
+                    </li>
                 </ul>
+                <div class="cat">
+                    {% include catminor-planets.html %}
+                </div>
+                <div class="cat">
+                    {% include catlargest-asteroids.html %}
+                </div>
