--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -132,3 +132,9 @@ link: ceres
                         <a href="https://en.wikipedia.org/wiki/Ceres_(dwarf_planet)">https://en.wikipedia.org/wiki/Ceres_(dwarf_planet)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catlargest-asteroids.html %}
+                </div>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
