--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -43,7 +43,7 @@ link: dwarf-planet
                 </p>
                 <h2 class="paragraphheader" id="Criteria">Critera</h2>
                 <p class="paragraph">
-                    The criteria that distinguishes dwarf planets from <a href="planet.html">planets</a> is "clearing the neighborhood".
+                    The criteria that distinguishes dwarf planets from planets is "clearing the neighborhood".
                     This means that dwarf planets have not cleared their orbits of other objects.
                     Their orbits are shared with other bodies of similar, or greater size, and they are not the dominant object in these orbits.
                 </p>
@@ -70,7 +70,7 @@ link: dwarf-planet
                     Some objects like Gonggong, Quaoar and Sedna likely have differentiated interiors, while many smaller, darker bodies have low density and might have porous, undifferentiated interiors.
                 </p>
                 <p class="paragraph">
-                    Mike Brown classifies numerous <a href="tno.html">TNOs</a> in different categories of certainty to be round, based on size.
+                    Mike Brown classifies numerous TNOs in different categories of certainty to be round, based on size.
                     According to him, ten TNOs are "nearly certainly" dwarf planets - Eris, Pluto, Makemake, Gonggong, Haumea, Quaoar, Sedna, Orcus, Máni and Salacia.
                     The list has not been expanded since 2018 and old entries in the list have not been updated.
                 </p>
@@ -195,7 +195,7 @@ link: dwarf-planet
                 </div>
                 <h2 class="paragraphheader" id="OfficiallyRecognisedDwarfPlanets">Officially recognised dwarf planets</h2>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
                         <p class="caption">Pluto</p>
                     </div>
@@ -211,7 +211,7 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/eris.jpg" alt="Eris">
                         <p class="caption">Eris</p>
                     </div>
@@ -228,7 +228,7 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/haumea.png" alt="Haumea">
                         <p class="caption">Haumea</p>
                     </div>
@@ -243,7 +243,7 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/makemake.jpg" alt="Makemake">
                         <p class="caption">Makemake</p>
                     </div>
@@ -257,16 +257,16 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
                     <p class="readmore">Main article: <a href="ceres.html">Ceres</a></p>
                     <p class="paragraph">
-                        Ceres is the biggest of the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">asteroid belt</a> and is the only dwarf planet in the belt. 
+                        Ceres is the biggest of the asteroids in the asteroid belt and is the only dwarf planet in the belt. 
                         It is named after the Roman goddess of agriculture and fertility. 
-                        It was discovered in 1801 and was thought to be a planet, before other smaller bodies like Pallas, Juno, and <a href="vesta.html">Vesta</a> were discovered.
+                        It was discovered in 1801 and was thought to be a planet, before other smaller bodies like Pallas, Juno, and Vesta were discovered.
                         The surface of the asteroid consists of ice and carbonates. 
                         Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.
                     </p>
@@ -330,3 +330,6 @@ link: dwarf-planet
                         <a href="https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets">https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
