--- a/pages/earth.html
+++ b/pages/earth.html
@@ -227,36 +227,42 @@ link: earth
                         The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already successful.
                     </p>
                 </div>
-                <h2 class="paragraphsubheader" id="SpaceExploration">Space exploration</h2>
-                <h3 class="paragraphsubheader" id="SpaceRace">Space Race</h3>
-                <p class="paragraph">
-                    October 4 1957 marked the start of space exploration, when the Soviet Union launched Sputnik 1, the world’s first artificial satellite.
-                    The metal sphere orbited Earth every 96 minutes, transmitting simple radio signals.
-                    Sputnik’s success surprised the the United States, forcing them to accelerate their own space program and starting the Space Race between the USSR and the USA.
-                    Sputnik 2 was the next step, this time carrying the first living being into orbit: a stray dog named Laika.
-                    Though Laika did not survive the mission, her flight proved that a living organism could endure spaceflight.
-                    The United States responded with its first satellite, Explorer 1, launched the next year and discovered the Van Allen radiation belt surrounding Earth.
-                    As part of the second Korabl-Sputnik mission, two more dogs - Belka and Strelka, were the first to return alive from orbit in outer space.
-                </p>
-                <p class="paragraph">
-                    In 1961, after three more missions with dogs on board, Soviet cosmonaut Yuri Gagarin became the first human in space and to orbit Earth aboard Vostok 1.
-                    The spaceflight consisted of a single orbit after which Gagarin would descend with a parachute landing in Saratov Oblast, Russian SSR.
-                    Five more Vostok spacecrafts were sent in orbit, each with one crewman.
-                    In 1962, as part of Project Mercury, John Glenn becomes the first American to orbit Earth aboard Friendship 7, following Alan Sheppard's suborbital flight the previous year aboard Freedom 7.
-                    USSR's Voskhod programme included two crewed missions, sending five people in total, with Alexei Leonov performing the first spacewalk during the Voskhod 2 mission. 
-                    Meanwhile, the American Gemini programme found success in performing space rendezvous (Gemini 6 and 7) and docking (Gemini 8), previously attempted during Vostok 3 and 4
-                </p>
-                <p class="paragraph">
-                    The two powers were preparing to send people on the Moon.
-                    The Soviet Union was again ahead with the Luna and Zond programmes.
-                    Eventually, after an unfortunate setback and several gradual test missions, the USA succeeded and sent people on the moon with Apollo 11.
-                    So far, USA has been the only country to send people there.
-                </p>
-                <p class="paragraph">
-                    In 1971, the Soviet Union begins the first space station - Salyut 1.
-                    The American response to the Salyut and later Almaz series was Skylab in 1973.
-                    The space race reached a conclusion in 1975, when the two countries conducted a joint Apollo-Soyuz project where the two countries exchanged their own crew members in space.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/spacecrafts/sputnik-1.png" alt="Sputnik 1">
+                        <p class="caption">Sputnik 1 model</p>
+                    </div>
+                    <h2 class="paragraphsubheader" id="SpaceExploration">Space exploration</h2>
+                    <h3 class="paragraphsubheader" id="SpaceRace">Space Race</h3>
+                    <p class="paragraph">
+                        October 4 1957 marked the start of space exploration, when the Soviet Union launched Sputnik 1, the world’s first artificial satellite.
+                        The metal sphere orbited Earth every 96 minutes, transmitting simple radio signals.
+                        Sputnik’s success surprised the the United States, forcing them to accelerate their own space program and starting the Space Race between the USSR and the USA.
+                        Sputnik 2 was the next step, this time carrying the first living being into orbit: a stray dog named Laika.
+                        Though Laika did not survive the mission, her flight proved that a living organism could endure spaceflight.
+                        The United States responded with its first satellite, Explorer 1, launched the next year and discovered the Van Allen radiation belt surrounding Earth.
+                        As part of the second Korabl-Sputnik mission, two more dogs - Belka and Strelka, were the first to return alive from orbit in outer space.
+                    </p>
+                    <p class="paragraph">
+                        In 1961, after three more missions with dogs on board, Soviet cosmonaut Yuri Gagarin became the first human in space and to orbit Earth aboard Vostok 1.
+                        The spaceflight consisted of a single orbit after which Gagarin would descend with a parachute landing in Saratov Oblast, Russian SSR.
+                        Five more Vostok spacecrafts were sent in orbit, each with one crewman.
+                        In 1962, as part of Project Mercury, John Glenn becomes the first American to orbit Earth aboard Friendship 7, following Alan Sheppard's suborbital flight the previous year aboard Freedom 7.
+                        USSR's Voskhod programme included two crewed missions, sending five people in total, with Alexei Leonov performing the first spacewalk during the Voskhod 2 mission. 
+                        Meanwhile, the American Gemini programme found success in performing space rendezvous (Gemini 6 and 7) and docking (Gemini 8), previously attempted during Vostok 3 and 4
+                    </p>
+                    <p class="paragraph">
+                        The two powers were preparing to send people on the Moon.
+                        The Soviet Union was again ahead with the Luna and Zond programmes.
+                        Eventually, after an unfortunate setback and several gradual test missions, the USA succeeded and sent people on the moon with Apollo 11.
+                        So far, USA has been the only country to send people there.
+                    </p>
+                    <p class="paragraph">
+                        In 1971, the Soviet Union begins the first space station - Salyut 1.
+                        The American response to the Salyut and later Almaz series was Skylab in 1973.
+                        The space race reached a conclusion in 1975, when the two countries conducted a joint Apollo-Soyuz project where the two countries exchanged their own crew members in space.
+                    </p>
+                </div>
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/spacecrafts/iss.jpg" alt="ISS">
