--- a/pages/eris.html
+++ b/pages/eris.html
@@ -112,3 +112,6 @@ link: eris
                         <a href="https://en.wikipedia.org/wiki/Eris_(dwarf_planet)">https://en.wikipedia.org/wiki/Eris_(dwarf_planet)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
