--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -30,9 +30,12 @@ link: exoplanet
                     </p>
                     <p class="paragraph">
                         In 1992, two planets were discovered around the pulsar PSR B1257+12.
-                        The two planets - Draugr and Poltergeist are the first known exoplanets.
+                        The two planets - Poltergeist and Phobetor - are the first known exoplanets.
+                        A third planet was later discovered in 1994 - Draugr.
                         In 1995, another planet was discovered, this time around the star 51 Pegasi.
                         The planet Pegasi 51b, later named Dimidium, is the first to orbit around another main-sequence star.
+                        In 2002, it was confirmed that there was a planet around Gamma Cephei A.
+                        Tadmor, as it was named, was the first detected candidate that was later confirmed, originally reported in 1988.
                     </p>
                     <p class="paragraph">
                         In 2009, NASA launched the Kepler Space Telescope.
@@ -112,7 +115,7 @@ link: exoplanet
                         The method is very precise and can detect planets smaller than Earth, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
                     </p>
                     <p class="paragraph">
-                        The first exoplanets ever are Draugr, Poltergeist, and Phobetor, which orbit the pulsar PSR B1257+12.
+                        The first exoplanets to be confirmed - Draugr, Poltergeist, and Phobetor -were detected by pulsar timing, around PSR B1257+12.
                     </p>
                     <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
                     <p class="paragraph">
@@ -151,3 +154,6 @@ link: exoplanet
                         <a href="https://en.wikipedia.org/wiki/Exoplanet">https://en.wikipedia.org/wiki/Exoplanet</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
