--- a/pages/haumea.html
+++ b/pages/haumea.html
@@ -124,3 +124,6 @@ link: haumea
                         <a href="https://en.wikipedia.org/wiki/Haumea">https://en.wikipedia.org/wiki/Haumea</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
