--- a/pages/io.html
+++ b/pages/io.html
@@ -15,11 +15,17 @@ link: io
                         It is slightly larger than <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a>.
                         Discovered by Galileo Galilei in 1610, it is the innermost of the four Galilean moons.
                         It get its name from the mythological figure Io, a priestess of Hera who was seduced by Zeus.
+                    </p>
                     <p class="paragraph">
                         Io is the most volcanically active celestial body in the <a href="solar-system.html">Solar System</a>.
                         This is because of the gravitational pull of Jupiter on one side, and Ganymede and <a href="europa.html">Europa</a> on the other side.
                         Together these three satellites are in a orbital resonance with each other.
                         Volcano eruptions can be so powerful that Earth telescopes can see them.
+                        Because of the volcanic activity, the surface of Io is young and colorful.
+                    </p>
+                    <p class="paragraph">
+                        Io has been visited by the several Jupiter missions and has been studied extensively by the orbiter Galileo.
+                        A dedicated mission has been proposed, but it never received green light.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
@@ -72,27 +78,19 @@ link: io
                     </div>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/features/pele.jpg" alt="Pele">
                         <p class="caption">Io and the volcano Pele with its reddish ring</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                     <p class="paragraph">
-                        Io's surface is shaped by its dynamic and ever-changing surface, which is the result of its intense volcanic activity.
+                        Io's surface is dynamic and ever-changing, the result of its intense volcanic activity.
                         The surface is covered with a variety of volcanic features, including lava flows, volcanic calderas, and extensive plains of sulfur and sulfur dioxide.
                         The most prominent features are the numerous volcanoes and lava lakes, which are constantly erupting and resurfacing the moon.
                         Io's surface is relatively young, with an estimated age of only a few million years in some regions, due to the continuous resurfacing by volcanic activity.
-                        Io's surface is covered in various materials with different colors.
+                        It is covered in various materials with different colors.
                         Yellow and white regions are primarily composed of sulfur and sulfur dioxide, while red and black areas are rich in silicates and other minerals.
                         Thus, Io lacks impact craters like other satellites (another exception is Europa).
-                    </p>
-                    <p class="paragraph">
-                        The atmosphere of Io is extremely thin and is primarily composed of sulfur dioxide, with minor sulfur oxide, sodium chloride and atomic sulfur and oxygen.
-                        A so called "post-eclipse brightening" has been noticed, suggesting that the atmosphere leave "frost" on top of the surface while in Jupiter's shadow.
-                        The surface radiation levels on Io is 36 000 mSv per day, the highest of the four Galilean moons.
-                        Radiation this strong breaks down material like cyclical sulfur.
-                        It is also makes it challenging to send an orbiter around Io.
-                        Europa is similarly challenging, although the levels there are five times less than on Io.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -111,30 +109,46 @@ link: io
                     <p class="paragraph">
                         The volcanic activity on Io not only shapes its surface but also contributes to its tenuous atmosphere.
                     </p>
+                    <h3 class="paragraphheader" id="Atmosphere">Atmosphere</h3>
+                    <p class="paragraph">
+                        The atmosphere of Io is extremely thin and is primarily composed of sulfur dioxide, with minor sulfur oxide, sodium chloride and atomic sulfur and oxygen.
+                        This is because Io is unable to hold much of the gases released from the volcanoes and instead get pulled by Jupiter's gravity.
+                        A so called "post-eclipse brightening" has been noticed, suggesting that the atmosphere leaves "frost" on top of the surface while in Jupiter's shadow.
+                        The surface radiation levels on Io is 36 000 mSv per day, the highest of the four Galilean moons.
+                        Radiation this strong breaks down material like cyclical sulfur.
+                        It also makes it challenging to send an orbiter around Io.
+                        Europa is similarly challenging, although the levels there are five times less than on Io.
+                    </p>
                 </div>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                    Pioneer 10 and 11, launched in the early 1970s, were the first to fly by Jupiter and Io.
-                    They provided the initial close-up images of Io, revealing its colorful surface and hinting at its volcanic nature.
-                    They also found the first signs of an athmosphere.
-                </p>
-                <p class="paragraph">
-                    The Voyager 1 and 2 spacecraft captured detailed images of Io during their flybys in 1979.
-                    These images confirmed the presence of active volcanoes and provided the first evidence of Io's intense volcanic activity.
-                    The Voyager images in particular revealed nine different volcanic plumes.
-                    Voyager 2's flyby also revealed that some areas of the surface have changed and that most of the plumes were still active.
-                </p>
-                <p class="paragraph">
-                    The Galileo spacecraft, which orbited Jupiter from 1995 to 2003, conducted extensive observations of Io.
-                    Galileo's instruments detected numerous active volcanoes, measured the composition of Io's atmosphere and significantly advanced our understanding of Io's internal structure and volcanic processes.
-                    Cassini and New Horizons made some distant observations of the volcanoes, including a large plume of Tvashtar Patera.
-                    Further observations were made with Juno during the extension of the mission.
-                </p>
-                <p class="paragraph">
-                   JUICE, which is on its way to the Jovian system to study its icy moons, and Europa Clipper, which will orbit Jupiter to observe Europa, are not going to focus on Io, but might monitor the volcanic activity from a distance.
-                   Io Volcanic Observer was a low-cost mission proposal that was planned to conduct a detailed study of Io's volcanic activity, but was cancelled in favor of DAVINCI+ and VERITAS to visit <a href="venus.html">Venus</a>.
-                   The mission would have used Io to learn about other tidally heated worlds like Europa, Ganymede, <a href="titan.html">Titan</a>, and <a href="enceladus.html">Enceladus</a>.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/io-illuminated.jpg" alt="Io illuminated">
+                        <p class="caption">Io in true color, with its shadow illuminated by Jupiter, seen from Juno. <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Io_-_PJ58_-_true_colors_%2853517164733%29.jpg/330px-Io_-_PJ58_-_true_colors_%2853517164733%29.jpg">Source</a></p>
+                    </div>
+                    <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        Pioneer 10 and 11, launched in the early 1970s, were the first to fly by Jupiter and Io.
+                        They provided the initial close-up images of Io, revealing its colorful surface and hinting at its volcanic nature.
+                        They also found the first signs of an athmosphere.
+                    </p>
+                    <p class="paragraph">
+                        The Voyager 1 and 2 spacecraft captured detailed images of Io during their flybys in 1979.
+                        These images confirmed the presence of active volcanoes and provided the first evidence of Io's intense volcanic activity.
+                        The Voyager images in particular revealed nine different volcanic plumes.
+                        Voyager 2's flyby also revealed that some areas of the surface have changed and that most of the plumes were still active.
+                    </p>
+                    <p class="paragraph">
+                        The Galileo spacecraft, which orbited Jupiter from 1995 to 2003, conducted extensive observations of Io.
+                        Galileo's instruments detected numerous active volcanoes, measured the composition of Io's atmosphere and significantly advanced our understanding of Io's internal structure and volcanic processes.
+                        Cassini and New Horizons made some distant observations of the volcanoes, including a large plume of Tvashtar Patera.
+                        Further observations were made with Juno during the extension of the mission.
+                    </p>
+                    <p class="paragraph">
+                       JUICE, which is on its way to the Jovian system to study its icy moons, and Europa Clipper, which will orbit Jupiter to observe Europa, are not going to focus on Io, but might monitor the volcanic activity from a distance.
+                       Io Volcanic Observer was a low-cost mission proposal that was planned to conduct a detailed study of Io's volcanic activity, but was cancelled in favor of DAVINCI+ and VERITAS to visit <a href="venus.html">Venus</a>.
+                       The mission would have used Io to learn about other tidally heated worlds like Europa, Ganymede, <a href="titan.html">Titan</a>, and <a href="enceladus.html">Enceladus</a>.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
