--- a/pages/makemake.html
+++ b/pages/makemake.html
@@ -104,3 +104,6 @@ link: makemake
                         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103524000575?via%3Dihub">https://www.sciencedirect.com/science/article/abs/pii/S0019103524000575?via%3Dihub</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
