--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -12,12 +12,15 @@ link: natural-satellite
                 <p class="paragraph">
                     Six of the eight planets in the <a href="solar-system.html">Solar System</a> have at least one satellite. 
                     Many of the known <a href="dwarf-planet.html">dwarf planets</a> also have satellites, as well as some <a href="asteroid.html">asteroids</a>.
+                    <a href="saturn.html">Saturn</a> has the most known satellites at 274, followed by <a href="jupiter.html">Jupiter</a>, <a href="uranus.html">Uranus</a>, and <a href="neptune.html">Neptune</a>.
+                    The largest moons are round in shape, similar to planets.
+                    They are refered to as planetary-mass moons and there are 19 known - 7 oribitng Saturn, 5 around Uranus, 4 around Jupiter, and one each around <a href="earth.html">Earth</a>, Neptune, and <a href="pluto.html">Pluto</a>.
                 </p>
                 <h2 class="paragraphheader" id="HistoryAndDefiningSatellites">History and defining satellites</h2>
                 <p class="paragraph">
-                    <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a> is the first known satellite. 
+                    Earth's <a href="moon.html">Moon</a> is the first known satellite. 
                     Because other satellites weren't discovered, the Moon was considered a planet. 
-                    Galileo's discovery of the Galilean moons of <a href="jupiter.html">Jupiter</a> lead to the creation of the new class of objects. 
+                    Galileo's discovery of the Galilean moons of Jupiter lead to the creation of the new class of objects. 
                     The first one to call them "satellites" was Johannes Kepler.
                 </p>
                 <p class="paragraph">
@@ -33,7 +36,7 @@ link: natural-satellite
                     <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
                     <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
                     <p class="paragraph">
-                        The Moon is the only natural satellite orbiting <a href="earth.html">Earth</a>. 
+                        The Moon is the only natural satellite orbiting Earth. 
                         It is also the only natural astronomic body other than Earth that has been visited by people. 
                         It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. 
                         The Moon has no magnetic field, a hydrosphere, or a significant athmosphere.
@@ -46,13 +49,13 @@ link: natural-satellite
                         <a href="mars.html">Mars</a> has two natural satellites - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>. 
                         They are named after the Greek gods of fear and terror respectively. 
                         Phobos is the bigger of the two and orbits closer to Mars. 
-                        Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
+                        Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">asteroid belt</a>.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center h180">
+                        <div class="captionbox center h120">
                             <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos">
                         </div>
-                        <div class="captionbox center h180">
+                        <div class="captionbox center h120">
                             <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos">
                         </div>
                         <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
@@ -61,7 +64,7 @@ link: natural-satellite
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="GalileanSatellites">Galilean satellites</h3>
                     <p class="paragraph">
-                        <a href="jupiter.html">Jupiter</a> has four round moons - <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
+                        Jupiter has four round moons - <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
                         They were discovered by Galileo Galilei in 1610. 
                         Ganymede is the largest known satellite and is bigger than <a href="mercury.html">Mercury</a>. 
                         Of the four, Europa is the only one that is smaller than Earth's Moon. 
@@ -95,28 +98,35 @@ link: natural-satellite
                         They are significantly smaller than the Galilean moons. 
                         The biggest of them is <a href="amalthea.html">Amalthea</a>, and the most massive is Himalia.
                     </p>
+                    <p class="paragraph">
+                        These moons are subdivided into inner, regular moons, of which there are four, and outer moons.
+                        Based on their orbital parameters, the outer moons are classified further into five families and two unclassified moons.
+                    </p>
                 </div>
-                <h3 class="paragraphsubheader" id="SatellitesOfSaturn">Satellites of Saturn</h3>
-                    <p class="readmore">Main article: <a href="satellites-of-saturn.html">Satellites of Saturn</a></p>
-                <p class="paragraph">
-                    There are 274 moons known to orbit <a href="saturn.html">Saturn</a>. 
-                    The ones discovered earlier were named after Titans and Giants from Greek mythology. 
-                    Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except <a href="phoebe.html">Phoebe</a>).
-                </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan">
                         <p class="caption">Titan</p>
                     </div>
+                    <h3 class="paragraphsubheader" id="SatellitesOfSaturn">Satellites of Saturn</h3>
+                    <p class="readmore">Main article: <a href="satellites-of-saturn.html">Satellites of Saturn</a></p>
+                    <p class="paragraph">
+                        There are 274 moons known to orbit Saturn. 
+                        The ones discovered earlier were named after Titans and Giants from Greek mythology. 
+                        Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except <a href="phoebe.html">Phoebe</a>).
+                    </p>
                     <p class="paragraph">
                         The biggest of these is <a href="titan.html">Titan</a>, a satellite bigger than the planet Mercury and smaller than Jupiter's Ganymede. 
                         Titan has a thick orange athmosphere composed mostly of nitrogen and methane. 
-                        Liquid methane lakes are concentrated around the poles, the only possible spots on the surface for them to form.
+                        Liquid hydrocarbon lakes are concentrated around the poles, the only possible spots on the surface for them to form.
+                        The presence of a liquid enironment and complex organic elements, paired with significant geologic activity makes Titan a unique candidate for the search for life.
                     </p>
                 </div>
                 <div class="articlediv">
                     <p class="paragraph">
                         Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
+                        They are mostly inactive icy bodies with many craters and a few canyons that are remnants of a short period of geologic activity.
+                        The most unique exceptions are Iapetus, which has a dark hemisphere and an equatorial ridge across it, and Enceladus, which is primarily shaped by young canyons that release plumes of water into space.
                     </p>
                     <div class="imgwrapper">
                         <div class="captionbox center h120">
@@ -149,7 +159,7 @@ link: natural-satellite
                     <h3 class="paragraphsubheader" id="SatellitesOfUranus">Satellites of Uranus</h3>
                     <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                     <p class="paragraph">
-                        29 moons are known to orbit <a href="uranus.html">Uranus</a>, all but two named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        29 moons are known to orbit Uranus, all but two named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                         Miranda and Ariel show signs of significant geologic activity.
                     </p>
@@ -180,8 +190,8 @@ link: natural-satellite
                     <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
                     <p class="readmore">Main article: <a href="satellites-of-neptune.html">Satellites of Neptune</a></p>
                     <p class="paragraph">
-                        There are 16 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
-                        The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
+                        There are 16 known Neptunian satellites, named after Greek water deities. 
+                        The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a dwarf planet caught by the gravity of Neptune.
                     </p>
                     <p class="paragraph">
                         The biggest non-planetary satellite in the Solar System is <a href="proteus.html">Proteus</a>, which orbits Neptune.
@@ -194,7 +204,7 @@ link: natural-satellite
                     </div>
                     <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                     <p class="paragraph">
-                        <a href="pluto.html">Pluto</a> has <a href="satellites-of-pluto.html">five satellites</a> - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
+                        Pluto has <a href="satellites-of-pluto.html">five satellites</a> - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
                         Names originate from Greek mythology and are related to the underworld. 
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
