--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -8,7 +8,7 @@ link: neptune
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune">
-                        <p class="caption">Neptune as seen by Voyager 2, 1989</p>
+                        <p class="caption">Neptune as seen by Voyager 2, 1989, slightly calibrated to approximate true color</p>
                     </div>
                     <p class="paragraph">
                         Neptune is the eight <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the <a href="solar-system.html">Solar System</a>. 
@@ -88,10 +88,13 @@ link: neptune
                 <p class="paragraph">
                     Neptune has a similar structure to that of Uranus.
                     The atmosphere at high altitudes consists of 80% hydrogen and 19% helium, with trace amounts of methane.
-                    It is the methane that gives the blue color of Neptune.
+                    It is the methane that gives the blue color of Neptune, similar to that of Uranus.
                     At lower levels, the amount of volatiles like water, methane and ammonia increases.
+                </p>
+                <p class="paragraph">
                     The atmosphere is divided into a troposphere, a stratosphere, a thermosphere and an exosphere.
-                    Clouds vary in composition based on altitude - methane clouds are highest in the atmosphere, followed by hydrogen sulfide clouds between one and five bars, ammonia clouds over five bars and water clouds deep in the atmosphere.
+                    One difference between Neptune and Uranus are the more prominent clouds.
+                    They vary in composition based on altitude - methane clouds are highest in the atmosphere, followed by hydrogen sulfide clouds between one and five bars, ammonia clouds over five bars and water clouds deep in the atmosphere.
                 </p>
                 <p class="paragraph">
                     The Neptunian mantle is made of ices at a state of critical fluids.
