--- a/pages/planet.html
+++ b/pages/planet.html
@@ -55,7 +55,7 @@ link: planet
                 </p>
                 <p class="paragraph">
                     In 1992, two planets were discovered around the pulsar PSR B1257+12.
-                    The two planets - Draugr and Poltergeist are the first known exoplanets.
+                    The two planets - Poltergeist and Phobetor - are the first known exoplanets.
                     In 1995, another planet was discovered, this time around the star 51 Pegasi.
                     The planet Pegasi 51b, later named Dimidium, is the first to orbit around another main-sequence star.
                 </p>
@@ -249,7 +249,8 @@ link: planet
                 <p class="readmore">Main article: <a href="exoplanet.html">Exoplanet</a></p>
                 <p class="paragraph">
                     Exoplanets are planets orbiting <a href="star.html">stars</a> different from the <a href="sun.html">Sun</a>. 
-                    There are more than 5,000 known exoplanets.
+                    There are more than 6,000 known exoplanets.
+                    Among them are many types different from those in the Solar System, including Super-Earths, hot Jupiters, and rogue planets.
                 </p>
                 <p class="paragraph">
                     The closest exoplanets are located 4.2 light-years from Earth and orbit Proxima Centauri, the closest star to Earth.
