--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -188,3 +188,6 @@ link: pluto
                         <a href="https://en.wikipedia.org/wiki/Pluto">https://en.wikipedia.org/wiki/Pluto</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
