--- a/pages/satellites-of-neptune.html
+++ b/pages/satellites-of-neptune.html
@@ -65,6 +65,7 @@ link: satellites-of-neptune
                         <p class="caption">Triton</p>
                     </div>
                     <h3 class="paragraphheader" id="Triton">Triton</h3>
+                    <p class="readmore">Main article: <a href="triton.html">Triton</a></p>
                     <p class="paragraph">
                         Triton, the biggest satellite, was discovered just 17 years after the discovery of Neptune. 
                         It is believed to be a dwarf planet caught by the gravity of Neptune, because of it's retrograde orbit. 
