--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -154,7 +154,7 @@ link: satellites-of-saturn
                         It is more broadly defined than the Inuit and the Gallic groups, so it is made up of more distinct subgroups.
                         Phoebe, the most massive irregularly-shaped satellite and the largest irregular one is actually part of the Norse group, despite being named after a Greek Titaness. 
                         Attemps were made to recategorise the Norse group, even though there are no clear clusters.
-                        Four groups were defined by Ashton et al. based on inclinations - Phoebe, Mundalfari, Kari, and low-inclined.
+                        Four groups were defined by Ashton et al. based on inclinations - Phoebe, Mundilfari, Kari, and low-inclined.
                     </p>
                 </div>
                 <h3 class="paragraphheader" id="GallicGroup">Gallic group</h3>
