--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -74,7 +74,7 @@ link: solar-system
                         <div class="captionbox center h180">
                             <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
                         </div>
-                        <p class="caption">Mercury, Venus, Earth, Mars (<a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a>. <a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a>)</p>
+                        <p class="caption">Mercury, Venus, Earth, Mars (<a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a>)</p>
                     </div>
                     <p class="paragraph">
                         There are only three natural satellites orbiting these planets - the <a href="moon.html">Moon</a>, which orbits the Earth, and <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>, which orbit Mars.
