--- a/pages/star.html
+++ b/pages/star.html
@@ -18,7 +18,7 @@ link: star
                     </p>
                     <p class="paragraph">
                         Stars are formed when a <a href="nebula.html">nebula</a> collapses by it's own gravity. 
-                        During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a <a href="black-hole.html">black hole</a>, depending on a star's mass.
+                        During their life they fuse hydrogen into helium and eventually die, forming a white dwarf, a neutron star, or a <a href="black-hole.html">black hole</a>, depending on the star's mass.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Observation">Observation</h2>
@@ -37,39 +37,33 @@ link: star
                 <p class="paragraph">
                     Significant advancements in the understanding of stars were made in the twentieth century, in particular their compositons, star classification of spectral types and evolution of stars.
                 </p>
-                <div class="articlediv">
-                    <div class="captionbox right h180">
-                        <img class="articleimage" src="../assets/images/stars/betelgeuse.jpg" alt="Betelgeuse">
-                        <p class="caption">The red supergiant Betelgeuse, imaged by ALMA. <a href="https://commons.wikimedia.org/wiki/File:Betelgeuse_captured_by_ALMA.jpg">Source</a></p>
-                    </div>
-                    <h2 class="paragraphheader" id="LifeCycle">Life cycle</h2>
-                    <p class="paragraph">
-                        Stars form in vast clouds of gas and dust called nebulae.
-                        Gravity pulls the gas together, forming a protostar. As the protostar grows, nuclear fusion begins, and a star is born.
-                        Usually, a protoplanetary disc forms around protostars, which would eventually create other smaller objects around the star.
-                    </p>
-                    <p class="paragraph">
-                        Most of a star’s life is spent in the main sequence phase, where it fuses hydrogen into helium.
-                        During that time, stars emit gases known as stellar winds.
-                    </p>
-                    <p class="paragraph">
-                        After exhausting their hydrogen in their cores, smaller stars begin to fuse helium.
-                        They expand into red giants, which shed their outer layers into outer space.
-                        This process continues until depleting its helium core, leaving behind a white dwarf.
-                        Most of the star's mass before the post-main sequence events is dispersed, creating a planetary nebula.
-                        This new material eventually creates a new generation of stars.
-                    </p>
-                    <p class="paragraph">
-                        Massive stars of 9 M☉ turn first into blue and later red supergiants.
-                        These stars begin to fuse heavier elements - helium, carbon, and so on, until they reach iron, which does not emit energy on fusion.
-                        After their cores become too heavy to sustain their own weights, they collapse and after electron capture (protons and electrons collide to produce neutrons and neutrinos) they burst in violent supernovae, leaving behind neutron stars or black holes.
-                    </p>
-                </div>
-                <h2 class="paragraphheader" id="Classification">Classification</h2>
+                <h2 class="paragraphheader" id="LifeCycle">Life cycle</h2>
+                <p class="paragraph">
+                    Stars form in vast clouds of gas and dust called nebulae.
+                    Gravity pulls the gas together, forming a protostar. As the protostar grows, nuclear fusion begins, and a star is born.
+                    Usually, a protoplanetary disc forms around protostars, which would eventually create other smaller objects around the star.
+                </p>
+                <p class="paragraph">
+                    Most of a star’s life is spent in the main sequence phase, where it fuses hydrogen into helium.
+                    During that time, stars emit gases known as stellar winds.
+                </p>
+                <p class="paragraph">
+                    After exhausting their hydrogen in their cores, smaller stars begin to fuse helium.
+                    They expand into red giants, which shed their outer layers into outer space.
+                    This process continues until depleting its helium core, leaving behind a white dwarf.
+                    Most of the star's mass before the post-main sequence events is dispersed, creating a planetary nebula.
+                    This new material eventually creates a new generation of stars.
+                </p>
+                <p class="paragraph">
+                    Massive stars of 9 M☉ turn first into blue giants and later red supergiants.
+                    These stars begin to fuse heavier elements - helium, carbon, and so on, until they reach iron, which does not emit energy on fusion.
+                    After their cores become too heavy to sustain their own weights, they collapse and after electron capture (protons and electrons collide to produce neutrons and neutrinos) they burst in violent supernovae, leaving behind neutron stars or black holes.
+                </p>
+                <h2 class="paragraphheader" id="SpectralClassification">Spectral classification</h2>
                 <p class="paragraph">
                     Stars are classified based on their spectral characteristics. 
-                    In order from hottest to coldest, they are: O, B, A, F, G, K and M. 
-                    The Sun is a G-type star. 
+                    In order from hottest to coldest, the spectral types are: O, B, A, F, G, K and M. 
+                    The Sun is a G-type main sequence star, also known as a yellow dwarf. 
                     The most common stars are M stars, making up around 75% of all main-sequence stars, while O stars are less than one in a million.
                 </p>
                 <div class="wrapper">
@@ -100,6 +94,68 @@ link: star
                         </tr>
                     </table>
                 </div>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/stars/betelgeuse.jpg" alt="Betelgeuse">
+                        <p class="caption">The red supergiant Betelgeuse, imaged by ALMA. <a href="https://commons.wikimedia.org/wiki/File:Betelgeuse_captured_by_ALMA.jpg">Source</a></p>
+                    </div>
+                    <h2 class="paragraphheader" id="SpecialTypes">Special types</h2>
+                    <h3 class="paragraphheader" id="Giants">Giants</h3>
+                    <p class="paragraph">
+                        Giants are stars that have exhausted hydrogen in their cores and expanded as they burn hydrogen in a shell.
+                        Compared to the Sun, they are up to a few hundred times its radius and ten times its luminosity.
+                        While low-mass stars (below 0.25 M☉) cannot deplete their core because of convection, bigger stars become red giants.
+                        Stars with a higher mass (over 9-12 M☉) briefly become blue giants before becoming red supergiants.
+                        Giants observe significant mass loss due to their strong stellar winds.
+                    </p>
+                    <h3 class="paragraphheader" id="Supergiants">Supergiants</h3>
+                    <p class="paragraph">
+                        Supergiants are some of the largest and most luminous stars.
+                        They are the result of massive main-sequence stars depleting their hydrogen in the core.
+                        Supergiants are capable of exploding into supernovae.
+                        One luminosity class exists above them - hypergiants.
+                    </p>
+                    <h3 class="paragraphheader" id="Subdwarfss">Subdwarfs</h3>
+                    <p class="paragraph">
+                        Subdwarfs are stars with lower metallicity than main sequence stars, often found in the halo of <a href="galaxy.html">galaxies</a>.
+                        This makes them less opaque and less luminous than their main sequence counterparts.
+                    </p>
+                    <h3 class="paragraphheader" id="WolfRayetStars">Wolf-Rayet stars</h3>
+                    <p class="paragraph">
+                        Wolf-Rayet stars are massive, hot stars with unusual spectra.
+                        The spectra indicate very high surface enhancement of heavy elements, hydrogen depletion, and strong stellar winds.
+                    </p>
+                    <h3 class="paragraphheader" id="TTauriStars">T Tauri stars</h3>
+                    <p class="paragraph">
+                        T Tauri stars are young, variable stars in the process of contracting toward the main sequence.
+                        They are less than about ten million years old.
+                    </p>
+                </div>
+                <h2 class="paragraphheader" id="StarRemnants">Star remnants</h2>
+                <h3 class="paragraphheader" id="WhiteDwarfs">White dwarfs</h3>
+                <p class="paragraph">
+                    White dwarfs are the remnants of most stars after they have exhausted their nuclear fuel.
+                    An Earth-sized white dwarf has a mass comparable to that of the Sun.
+                </p>
+                <h3 class="paragraphheader" id="NeutronStars">Neutron stars</h3>
+                <p class="paragraph">
+                    Neutron stars are the extremely dense remnants of massive supergiants after supernova explosions.
+                    They have a radius of approximately 10 kilometers and a mass of about 1.4 M☉.
+                    The name reflects their composition, as the protons and electrons have converted into more neutrons.
+                </p>
+                <h3 class="paragraphheader" id="Pulsars">Pulsars</h3>
+                <p class="paragraph">
+                    Pulsars are highly magnetized rotating neutron stars that emit beams of electromagnetic radiation out of its magnetic poles.
+                    Their pulsating nature is caused by the rotation of the pulsar and the beams, similar to a lightouse.
+                </p>
+                <h3 class="paragraphheader" id="BlackHoles">Black holes</h3>
+                <p class="readmore">Main article: <a href="black-hole.html">Black hole</a></p>
+                <p class="paragraph">
+                    Black holes are the densest and most massive star remnants, resulting from the collapse of the largest stars.
+                    They are so heavy that light is unable to escape it.
+                    Black holes can absorb even more mass, until they become supermassive black holes.
+                    Such black holes exist in the centers of most galaxies.
+                </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
