--- a/pages/tethys.html
+++ b/pages/tethys.html
@@ -114,3 +114,6 @@ link: tethys
                         <a href="https://en.wikipedia.org/wiki/Tethys_(moon)">https://en.wikipedia.org/wiki/Tethys_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
