--- a/pages/tno.html
+++ b/pages/tno.html
@@ -5,26 +5,37 @@ articlename: Trans-Neptunian object
 link: tno
 ---
 
-                <p class="paragraph">
-                    A trans-Neptunian object (TNO) is a minor planet with an average distance from the <a href="sun.html">Sun</a> greater than that of <a href="neptune.html">Neptune</a>. 
-                    Trans-Neptunian objests are further divided into Kuiper belt objects, scattered disc objects and extreme trans-Neptunian objects. 
-                    There are more than 2,000 TNOs, almost 700 of which are named.
-                </p>
-                <p class="paragraph">
-                    The first TNO to be discovered was Pluto in 1930. 
-                    In 1992 a second object - 15760 Albion, was discovered. 
-                    <a href="pluto.html">Pluto</a> is the largest TNO and <a href="eris.html">Eris</a> is the most massive.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h300">
+                        <img class="articleimage" src="../assets/images/diagrams/distant-minor-planets.png" alt="Location of minor planets">
+                        <p class="caption">Distant minor planets ad Jupiter trojans (gray). Centaurs are in green, Kuiper belt is in blue, scattered disc is in orange, Neptune trojansa re in purple. <a href="https://commons.wikimedia.org/wiki/File:Kuiper_belt_plot_objects_of_outer_solar_system.png">Courtesy WilyD at English Wikipedia</a></p>
+                    </div>
+                    <p class="paragraph">
+                        A trans-Neptunian object (TNO) is a minor planet with an average distance from the <a href="sun.html">Sun</a> greater than that of <a href="neptune.html">Neptune</a>. 
+                        Trans-Neptunian objests are further divided into Kuiper belt objects, scattered disc objects and extreme trans-Neptunian objects. 
+                        There are more than 2,000 discovered TNOs, almost 700 of which are named.
+                    </p>
+                    <p class="paragraph">
+                        TNOs are mostly icy bodies and many are colored red due to the reaction of nitrogen and methane under the influence of cosmic and UV radiation, creating tholins.
+                        
+                    </p>
+                    <p class="paragraph">
+                        The first TNO to be discovered was <a href="pluto.html">Pluto</a> in 1930. 
+                        In 1992 a second object - 15760 Albion, was discovered. 
+                        Since then, many large objects like <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a> and <a href="makemake.html">Makemake</a> were discovered, as well as very distant bodies like <a href="sedna.html">Sedna</a>.
+                        Pluto is the largest TNO and Eris is the most massive.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     In the 1900s, it was suggested that a ninth <a href="planet.html">planet</a> existed beyond Neptune's orbit, which would explain the deviation of the actual from the expected orbit of Neptune. 
                     In 1930 Pluto was discovered, but was too small to explain these discrepancies. 
                     Still, it was considered a planet of the <a href="solar-system.html">Solar System</a>. 
-                    In 1992 another TNO was discovered - 15760 Albion. 
+                    In 1992 another TNO was discovered - 15760 Albion. the first "cubewano" (derived from the provisional name 1992 QB1), or non-resonant TNO. 
                     This lead to further searches.
                 </p>
                 <p class="paragraph">
-                    More TNOs were found - Varuna, Ixion, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, and <a href="haumea.html">Haumea</a>. 
+                    More TNOs were found - Varuna, Ixion, <a href="quaoar.html">Quaoar</a>, Sedna, and Haumea. 
                     With the discovery of Eris, the most massive TNO, the International Astronomical Union announced in 2006 that objects like Pluto and Eris would be classified as <a href="dwarf-planet.html">dwarf planets</a> - a new class of objects.
                 </p>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
@@ -36,7 +47,7 @@ link: tno
                         The latter ones are locked in a orbital resonance with <a href="neptune.html">Neptune</a>.
                     </p>
                     <p class="paragraph">
-                        The biggest cubewanos are Haumea, <a href="makemake.html">Makemake</a>, and Quaoar, while the biggest resonant KBO is Pluto. 
+                        The biggest cubewanos are Haumea, Makemake, and Quaoar, while the biggest resonant KBO is Pluto. 
                         Resonant KBOs with 2:3 resonance are thus called plutinos.
                     </p>
                 </div>
@@ -72,7 +83,7 @@ link: tno
                     <p class="paragraph">Pluto and Charon were visited by New Horizon in 2015.</p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/tnos/arrokoth.png" alt="Arrokoth">
                         <p class="caption">486958 Arrokoth</p>
                     </div>
@@ -90,3 +101,6 @@ link: tno
                         <a href="https://en.wikipedia.org/wiki/Trans-Neptunian_object">https://en.wikipedia.org/wiki/Trans-Neptunian_object</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catminor-planets.html %}
+                </div>
