--- a/pages/vesta.html
+++ b/pages/vesta.html
@@ -141,3 +141,6 @@ link: vesta
                         <a href="https://en.wikipedia.org/wiki/4_Vesta">https://en.wikipedia.org/wiki/4_Vesta</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catlargest-asteroids.html %}
+                </div>
